2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_view_tooltip_cb): fix leaks

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* appearance.glade: ellipsize the "Save As" button

2007-07-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string): don't allocate
	colors in the colormap
	(update_cursor_size_scale), (cursor_size_scale_value_changed_cb): don't
	crash if we have nothing but the default cursor theme

2007-07-05  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: set an explicit item width for the metatheme icon
	view so overly long names don't needlessly widen all items' width. Such
	names are wrapped now.

2007-07-05  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	* appearance-style.c: (cursor_size_scale_value_changed_cb), 
	(cursor_theme_changed), (prepare_list), (update_cursor_size_scale):
	* theme-util.h:
	Add cursor themes support.

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: add explicit width_request to our icon views so we
	can use GTK_POLICY_NEVER for horizontal scrollbars and still properly
	resize the window (part of bug #451585)

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* appearance.glade: move "selection_mode" to glade file and remove
	hard-coded item width

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func), (themes_init): fix leaks,
	use g_list_foreach instead of open-coded loop

2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: (theme_list_sort_func), (themes_init):
	Load the metatheme thumbnails in the order they are in the list.

2007-06-27  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-themes.c: (theme_list_sort_func, themes_init):
	Make the Custom theme always the first in the list and make it's label bold